# PR_Repair

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  Cursor Handoff.md  GOVERNANCE.md  MANIFEST.json  Makefile  README.md  ROADMAP.md  RUNTIME_MODEL.md  Unknown file.env.local.example  changed_files_manifest.json  pyproject.toml  recursive_audit_report.md  sonar-project.properties  validation_report.md
.github/workflows/: pr-checks.yml  pr-repair.yml
.l9/corpus/: manifest.json
contracts/: agent-review-payload.schema.json  fix_matrix.yaml
docs/: TECH_DEBT.md
docs/actuation/: CONVERGENCE_REPORT.yaml  VALIDATION.md  improvement_log.jsonl  review_ingest.md  validation_report.yaml
docs/adr/: 0001-llm-request-tier-depth-extension.md
docs/archive/: AGENT.md  DEFERRED.md  FINAL_READINESS_CHECKLIST.md  README_PHASE2.md  README_PR_REPAIR.md  RUNBOOK.md  SERVICE_MANIFEST.md  llms.txt  make_pr_pipeline_v2_1.plan.md
examples/: agent_review_payload.json
prompts/: unpack_analysis_prompt.md
router-shim/: README.md  package.json  setup.sh  shim.mjs
runtime/: ARTIFACT_CONTRACT.md
src/pr_repair/: __init__.py  candidates.py  cli.py  clustering.py  config.py  errors.py  logging.py  priorities.py  redaction.py  review_ingest.py  state_store.py  types.py
tests/compliance/: test_comment_priority_contract.py  test_review_only_governance_outputs.py
tests/fixtures/: codecov_findings.json  coderabbit_findings.json  github_open_prs.json  github_review_comments.json
tests/integration/: test_cli_dry_run.py  test_copilot_actuation.py  test_flow_dry_to_plan.py  test_flow_execute_verify.py  test_learning_packet_output.py  test_llm_apply.py  test_phase3_artifacts.py  test_pipeline_full_modes.py  test_pipeline_signal_order.py  test_pr_repair_loop.py  test_proposal_reporter.py  test_verify_command_resolution.py
tests/security/: test_patch_applier_exact_match.py  test_protected_path_block.py  test_review_ingest_path_guard.py
tests/unit/: test_adapter_live_fixtures.py  test_agent_md_recommender.py  test_approval_gate.py  test_candidates.py  test_classifier.py  test_cli_verify_command.py  test_clustering.py  test_config.py  test_copilot_adapter.py  test_deduper.py  test_env_loader.py  test_fingerprint.py  test_fix_matrix.py  test_github_connector_threads.py  test_ingestion_order.py  test_llm_bridge.py  test_makefile_contract.py  test_model_router.py  test_model_router_reachability.py  test_native_runner.py  test_orchestration_router.py  (+23 more)
(+88 files in other folders)
