[project]
name = "pr-repair"
version = "0.4.0"
description = "Deterministic Implementer Bot for L9-governed repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "requests>=2.32.4",
  "PyYAML>=6.0",
  "jsonschema>=4.21",
]

[project.scripts]
pr-repair = "pr_repair.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true
