[project]
name = "pr-repair"
version = "0.4.0"
description = "Deterministic Implementer Bot for L9-governed repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "requests>=2.32.4",
  "PyYAML>=6.0",
  "jsonschema>=4.21",
]

[project.scripts]
pr-repair = "pr_repair.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Backward-compat re-export shims: these modules intentionally star-import (or
# re-export) their canonical counterparts so old import paths keep working.
# F401 (unused re-export) and F403 (star import) are expected here, not defects.
"src/pr_repair/artifacts/*" = ["F401", "F403"]
"src/pr_repair/governance/*" = ["F401", "F403"]
"src/pr_repair/patching/*" = ["F401", "F403"]
"src/pr_repair/orchestration/__init__.py" = ["F401", "F403"]
"src/pr_repair/orchestration/run_pipeline.py" = ["F403"]
"src/pr_repair/classification/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true
